photography section updated

--- a/myproject/myapp/static/myapp/style.css
+++ b/myproject/myapp/static/myapp/style.css
@@ -76,7 +76,6 @@ p.tagline {
 .top-diag-left {
   height:90px;
   margin-top:-100px;
-  margin-bottom:0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%);
   clip-path: polygon(0 0, 100% 0, 100% 100%);
 }
@@ -89,92 +88,122 @@ p.tagline {
 
 /* between first and second pages*/
 .top-first {
-  background: white url("images/stardust.png");
+  background: rgb(242, 239, 224);
 }
 .bottom-second {
-    background: white url("images/brickwall.png");
+    background: rgb(180, 185, 151);
 }
 
 /* between second and third pages*/
 .top-second {
-  background: white url("images/brickwall.png");
+  background: rgb(180, 185, 151);
 }
 .bottom-third {
-    background: white url("images/stardust.png");
+    background: rgb(208, 190, 118);
 }
 
 /* between third and fourth pages*/
 .top-third {
-  background: white url("images/stardust.png");
+  background: rgb(208, 190, 118);
 }
 .bottom-fourth {
-    background: white url("images/brickwall.png");
+    background: rgb(196, 141, 116);
 }
 
 /* between fourth and fifth pages*/
 .top-fourth {
-  background: white url("images/brickwall.png");
+  background: rgb(196, 141, 116);
 }
 .bottom-fifth {
-    background: white url("images/stardust.png");
+    background: rgb(66, 66, 66);
 }
 
 /* between fifth and sixth pages*/
 .top-fifth {
-  background: white url("images/stardust.png");
+  background: rgb(66, 66, 66);
 }
 .bottom-sixth {
-    background: white url("images/brickwall.png");
+    background: rgb(242, 239, 224);
 }
 
 /* between sixth and seventh pages*/
 .top-sixth {
-  background: white url("images/brickwall.png");
+  background: rgb(242, 239, 224);
 }
 .bottom-seventh {
-    background: white url("images/stardust.png");
+    background: rgb(208, 190, 118);
 }
 
+
+/* Parallax scrolling*/
+
+.parallaxParent {
+    height: 100vh;
+    overflow: hidden;
+}
+.parallaxParent > * {
+  height: 200%;
+  position: relative;
+  top: -100%;
+}
+
+
+
+p {
+  font-family: 'Raleway', sans-serif;
+}
 
 /* page properties*/
 .firstpage {
-	background: white url("images/stardust.png") repeat;
-	color: #b2b2b2;
+	background:  rgb(242, 239, 224);
+	color: rgb(66, 66, 66);
+  padding-bottom: 200px
 }
 .secondpage {
-	background: white url("images/brickwall.png");
-	color: #b2b2b2;
+	background: rgb(180, 185, 151);
+	color: rgb(66, 66, 66);
   z-index:10;
   float:center;
   width:100%;  
-  padding-bottom:500px;
+  padding-bottom:850px;
+  padding-top:0;
 }
 
 .thirdpage {
-	background: white url("images/stardust.png");
-	color: #b2b2b2;
-  padding-bottom:100px;
+	background: rgb(208, 190, 118);
+	color: rgb(66, 66, 66);
+  padding-top: 100px;
+  padding-bottom:900px;
 }
+
 .fourthpage {
-	background: white url("images/brickwall.png");
-	color: #b2b2b2;
-  padding-bottom:100px;
+	background: rgb(196, 141, 116);
+	color: rgb(66, 66, 66);
+  padding-top: 110px;
+  padding-bottom:800px;
 }
 .fifthpage {
-	background: white url("images/stardust.png");
-	color: #b2b2b2;
-  padding-bottom:100px;
+	background: rgb(66, 66, 66);
+	color: rgb(242, 239, 224);
+  padding-top: 100px;
+  padding-bottom:5000px;
 }
 .sixthpage {
-	background: white url("images/brickwall.png");
-	color: #b2b2b2;
-  padding-bottom:100px;
+	background: rgb(242, 239, 224);
+	color: rgb(66, 66, 66);
+  padding-top: 40px;
+  padding-bottom:900px;
 }
 .seventhpage {
-	background: white url("images/stardust.png");
-	color: #b2b2b2;
-  padding-bottom:100px;
+	background: rgb(208, 190, 118);
+	color: rgb(66, 66, 66);
+  padding-top: 100px;
+  padding-bottom:200px;
 }
+
+
+
+
 
 
 .site-wrapper-inner {
@@ -185,21 +214,63 @@ p.tagline {
 .cover-container {
     height:auto;
     display:inline-block;
-    width:100%;
+    width:800px;
 }
 
 .picofme {
   position:absolute;
-  width:600px;
-  left:2%;
+  width:850px;
+  left:-3%;
 }
 
 .right-side-text {
-  width:auto;
+  position:absolute;
+  width:450px;
+  right:8%; 
+}
+
+.left-side-text {
+  padding-top:100px;
+  position:absolute;
+  width:450px;
+  left:8%;
 }
 
 
+.collage {
+  position:absolute;
+  margin-top:-7px;
+  width:900px;
+  left:0.5%;
+  -webkit-transform:rotate(-10deg);
+    /* Firefox */
+  -moz-transform: rotate(-10deg);
+  /* IE */
+  -ms-transform: rotate(-10deg);
+  /* Opera */
+  -o-transform: rotate(-10deg);
+}
 
+.photos-only {
+  position:absolute;
+  padding-top:400px;
+  width:97%;
+  left:1.5%;
+  text-align: center;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 0px;
+  padding-bottom: 5px;
+}
+
+td,img { 
+  padding:5px; 
+  border-width:0px; 
+  margin:0px; 
+  display: inline-block;
+}
 
 
 /* Padding for spacing */
@@ -289,8 +360,8 @@ p.tagline {
  */
 
 .footer {
-	background: white url("images/stardust.png");
-	color: #b2b2b2;
+	background: rgb(208, 190, 118);
+  color:rgb(66, 66, 66);
 	width:100%;
   margin-top:-20px;
 }
@@ -320,7 +391,7 @@ p.tagline {
 @media (min-width: 992px) {
   .masthead,
   .cover-container {
-    width: 700px;
+    width: 900px;
   }
 }
 
